# rental-deposit-escrow

./: .gitignore  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/controllers/: auth.ts  escrow.ts
backend/src/middleware/: auth.ts  validation.ts
backend/src/routes/: auth.ts  escrow.ts
backend/src/services/: auth.ts  escrow.ts  soroban.ts
backend/src/types/: index.ts
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Button.tsx  Card.tsx  EscrowStepper.tsx  StatusBadge.tsx
frontend/src/features/escrow/: CreateEscrowForm.tsx  EscrowCard.tsx  EscrowList.tsx
frontend/src/features/wallet/: WalletBar.tsx
frontend/src/hooks/: useEscrows.ts
frontend/src/lib/: api.ts  wallet.ts
frontend/src/providers/: WalletProvider.tsx
frontend/src/types/: index.ts
