[package]
name = "escrow"
version = "1.0.0"
edition = "2021"
description = "Soroban smart contract for rental deposit escrow"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true

[features]
testutils = ["soroban-sdk/testutils"]
